--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -6807,7 +6807,7 @@ img.rsImg {
 }
 
 .product-page section {
-    border-bottom: 1px solid #ebebeb;
+    /*border-bottom: 1px solid #ebebeb;*/
     padding: 20px 0;
 }
 
@@ -8761,4 +8761,25 @@ div.layout-style {
     #style-switcher {
         display: none;
     }
+}
+
+.shop-image {
+    border-radius: 50%;
+    border: 3px #e9e9e9 solid;
+}
+
+.shop-stacked-images > .main{
+    width: 70%;
+    overflow: hidden;
+}
+
+.shop-stacked-images > .small{
+    width: 28%;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    overflow: hidden;
+}
+.shop-stacked-images img {
+    height: 100%!important;
+    max-width: inherit!important;
 }
