--- a/theme/templates/accounts/shop_profile.html
+++ b/theme/templates/accounts/shop_profile.html
@@ -11,11 +11,20 @@
 
 {% block slider %}
 <div class="container fullwidth-element" style="background: url({{ MEDIA_URL }}{% thumbnail shop.background 1300 150 %}) center; height: 150px; margin-bottom: 35px;">
-	<img style="float: right; border-radius: 50%; border: 3px #e9e9e9 solid; margin-top: 25px; margin-right: 10px;" src="{{ MEDIA_URL }}{% thumbnail shop.image 150 150 %}" alt="" />
+	<img src="{{ MEDIA_URL }}{% thumbnail shop.image 150 150 %}" alt="{{shop.shopname}}" class="shop-image pull-right margin-top-10 margin-right-5" />
 </div>
+
 {% endblock %}
 
 {% block main %}
+{% if shop.on_vacation %}
+<div class="sixteen columns">
+    <div class="notification error text-center">
+    <p>Магазин на каникулах</p>
+</div>
+</div>
+<div class="clearfix"></div>
+{% endif %}
 <div class="eleven columns">
     <br>
     <h2 class="headline" style="margin-top:-37px; font-size: 35px!important;">{{ shop.shopname }}</h2>
@@ -31,51 +40,67 @@
     
 </div>
 <div class="five columns">
-    <h3 class="headline">Доставка</h3>
-    <span class="line" style="margin-bottom:0px;"></span>
-    <div class="clearfix"></div>
-    <div class="list-1">
-        <p></p>
+    {% get_fields shop starts_with="express" as express_fields %}
+    {% if express_fields %}
+    <h3 class="headline">Доставка</h3><span class="line"></span><div class="clearfix"></div>
+    <div class="list-2">
         <ul>
-            {% for fields in shop.get_express_fields|grouped %}
+            {% for fields in express_fields|grouped %}
             <li>
                 {% for field in fields %} 
-                {% if field.value == True %}
-                    <span> {{ field.label }}: </span> 
-                {% else %}
-                    <span style="white-space: nowrap">{{ field.value|rub_currency }} </span> 
-                {% endif %} 
-            {% endfor %}
+                    {% if field.value == True %}
+                        <span> {{ field.label }}</span> 
+                    {% else %}
+                        <span style="white-space: nowrap">{{ field.value|rub_currency }} </span> 
+                    {% endif %} 
+                {% endfor %}
             </li>
             {% endfor %}
-
         </ul>
         <div>{{ shop.express_other }}</div>
     </div>
     <div class="clearfix"></div>
+    {% endif %}
+    {% get_fields shop starts_with="payment" as payment_fields %}
+    {% if payment_fields %}
     <h3 class="headline">Оплата</h3>
-    <span class="line" style="margin-bottom:0px;"></span>
+    <span class="line"></span>
     <div class="clearfix"></div>
-    <div>
-            {% if shop.payment_personal or shop.payment_bank_transfer or shop.payment_card_transfer%} К оплате принимаются: {% if shop.payment_bank_transfer %} банковские переводы {% endif %} {% if shop.payment_card_transfer %} банковские карты {% endif %} {% if shop.payment_personal %} наличные. {% endif %} {% endif %}
-    {{ shop.payment_other }}
+    <div class="list-2">
+        <ul>
+            {% for field in payment_fields %}
+            {% if field.value == True %}
+                <li>{{ field.label }}</li>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    <p>{{ shop.payment_other }}</p>
     </div>
+    {% endif %}
+    <div class="clearfix"></div>
 </div>
 <div class="five columns" style="float: right">
     <h3 class="headline">Контакты</h3>
     <span class="line" style="margin-bottom:0px;"></span>
     <div class="clearfix"></div>
-    <span> {{ user.get_full_name }} </span>,
+    <span> {{ shop.user.get_full_name }}, </span>
     <span class="phone"> {{ shop.phone }} </span>
-    <p>{{ shop.city }}, {{ shop.country }}</p>
+    <p>{{ shop.country }} {{ shop.region }}</p>
     <div class="clearfix"></div>
     <div style="margin: 5px 0 0 0;"></div>
-    <p><a class="button color " href="#"> Задать вопрос </a></p>
+    <a class="popup-with-zoom-anim button color" href="#small-dialog">Задать вопрос</a>
+        <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+            <h2 class="margin-bottom-10">Задайте вопрос магазину</h2>
+            <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="button color" type="submit"><i class="fa fa-send black"></i>Отправить вопрос</button>
+            </form>
+        </div>
 </div>
-
-<div class="sixteen columns margin-top-50">
-<span class="line" style="margin-bottom:0px;"></span>
-	{# {% include "accounts/includes/user_widget.html" %} #}
+<div class="clearfix"></div>
+<div class="sixteen columns margin-top-25">
+	{# {% include "accounts/includes/shop_widget.html" %} #}
 </div>
 {% endblock %}
 
@@ -90,7 +115,13 @@ $(document).ready(function() {
 	});
 });
 </script>
-
-
-
+<script>
+$(function() {
+    $('.a_reply').click(function() {
+        // $('.comment-reply-form').hide();
+        $(this).parent().parent().parent().next().toggle('500');
+        // $(this).find('.comment-reply-form').toggle();
+    });
+});
+</script>
 {% endblock %}
