--- a/theme/templates/blog/blog_post_detail.html
+++ b/theme/templates/blog/blog_post_detail.html
@@ -25,17 +25,6 @@
 <div class="twelve columns">
 	<div class="extra-padding">
 		<article class="post single">
-		{# {% block blog_post_detail_featured_image %} #}
-			{# {% if settings.BLOG_USE_FEATURED_IMAGE and blog_post.featured_image %} #}
-			<!--<figure class="post-img">-->
-				<!--<a href="{# {{ MEDIA_URL }}{% thumbnail blog_post.featured_image 0 0 %} #}" class="mfp-image" title="{{ blog_post.title|title }}">
-					<img src="{# {{ MEDIA_URL }}{% thumbnail blog_post.featured_image 900 0 %} #}" />-->
-					<!--<div class="hover-icon"></div>
-				</a>-->
-			{# {% endif %} #}
-			<!--</figure>-->
-		{# {% endblock %} #}
-
 			<section class="date">
 			{% with day=blog_post.publish_date|date:"d"  month=blog_post.publish_date|date:"M"  %} 
 				<span class="day">{{day}}</span>
@@ -51,14 +40,18 @@
 					{% with blog_post.user as author %}
 						<a href="{% url 'blog_post_list_author' author %}">{{ author.get_full_name|default:author.username }}</a></span>
 					{% endwith %}
-					<!-- <span><i class="fa fa-tag"></i><a href="#">Travel</a>, <a href="#">Nature</a></span> -->
+					{% keywords_for blog_post as tags %}
+					{% if tags %}
+						<span><i class="fa fa-tag"></i>
+								{% for tag in tags %}
+								{% if not forloop.first %}, {% endif %}
+								<a href="{% url "blog_post_list_tag" tag.slug %}">{{ tag }}</a>
+							{% endfor %}
+						</span>
+					{% endif %}
 					{% if blog_post.allow_comments %}
 						{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-						<span><i class="fa fa-comment"></i><a href="#hypercomments_widget">
-							<i id="hp_comment_count"> 
-								{% include "generic/includes/hp_comment_count.html" %}
-							</i> 
-						</a></span>
+						<span><i class="fa fa-comment"></i>(Число)</span>
 						{% endif %}
 					{% endif %} 
 					
@@ -81,81 +74,5 @@
 		{% endif %}
 	</div>
 </div>
-<div class="four columns">
-
-	<!-- About -->
-	<div class="widget margin-top-0">
-		<h3 class="headline">{{ page.title|title}}</h3><span class="line"></span><div class="clearfix"></div>
-		<p>{{ page.get_content_model.content|richtext_filters|safe }}</p>
-	</div>
-	
-	
-	<!-- Categories -->
-	{% block blog_categories %}
-	{% blog_categories as categories %}
-		{% if categories %}
-		<div class="widget">
-			<h3 class="headline">{% trans "Categories" %}</h3><span class="line"></span><div class="clearfix"></div>
-			<nav class="categories">
-				<ul>
-				{% for category in categories %}
-					<li><a href="{% url 'blog_post_list_category' category.slug %}">{{ category }}</a> ({{ category.post_count }})</li>
-				{% endfor %}
-				</ul>
-			</nav>
-		</div>
-		{% endif %}	
-	{% endblock %}
-	
-
-	{% block blog_recent_posts %}
-	{% blog_recent_posts 5 as recent_posts %}
-	{% if recent_posts %}
-	<div class="widget margin-top-30">
-	<h3 class="headline">{% trans "Recent Posts" %}</h3><span class="line"></span><div class="clearfix"></div>
-	<ul class="widget-tabs">
-	{% for recent_post in recent_posts %}
-		<li>			
-	    {% spaceless %}
-	    {% if settings.BLOG_USE_FEATURED_IMAGE %}
-	    <div class="widget-thumb">
-				<a href="{{ recent_post.get_absolute_url }}">
-				{% if recent_post.featured_image %}
-					<img src="{{ MEDIA_URL }}{% thumbnail recent_post.featured_image 74 74 %}"/>
-				{% endif %}
-				</a>
-		</div>  
-		{% endif %}
-		<div class="widget-text">
-		    <h4><a href="{{ recent_post.get_absolute_url }}">{{ recent_post.title }}</a></h4>
-		    {% blocktrans with sometime=blog_post.publish_date|date %}<span>{{ sometime }} </span>{% endblocktrans %}
-	    </div>
-		<div class="clearfix"></div>
-	    {% endspaceless %}
-		</li>
-	{% endfor %}
-	</ul>
-	</div>
-	{% endif %}
-	{% endblock %}
-
-	{% block blog_keywords %}
-	{% keywords_for blog.blogpost as tags %}
-	{% if tags %}
-		<div class="widget margin-top-30">
-			<h3 class="headline">{% trans "Tags" %}</h3><span class="line"></span><div class="clearfix"></div>	
-			<nav class="tags">
-			{% for tag in tags %}
-			    <a href="{% url "blog_post_list_tag" tag.slug %}" class="tag-weight-{{ tag.weight }}">{{ tag }}</a>
-			{% endfor %}
-			</nav>
-		</div>
-	{% endif %}
-	{% endblock %}
-	
-
-	<br>
-	<br>
-
-</div>
 {% endblock %}
+
