--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -15,9 +15,82 @@
 {{ page.description }}
 {% endmetablock %}{% endblock %}
 
+{% block rightsidebar %}
+<div class="four columns">	
+	<!-- Categories -->
+	{% block blog_categories %}
+	{% blog_categories as categories %}
+		{% if categories %}
+		<div class="widget margin-top-0">
+			<h3 class="headline">{% trans "Categories" %}</h3><span class="line"></span><div class="clearfix"></div>
+			<nav class="categories">
+				<ul>
+					<li><a href="{% url 'blog_post_list' %}">Все записи</a></li>
+				{% for category in categories %}
+					<li><a href="{% url 'blog_post_list_category' category.slug %}">{{ category }}</a> ({{ category.post_count }})</li>
+				{% endfor %}
+				</ul>
+			</nav>
+		</div>
+		{% endif %}	
+	{% endblock %}
+	
+
+	{% block blog_recent_posts %}
+	{% blog_recent_posts 5 as recent_posts %}
+	{% if recent_posts %}
+	<div class="widget margin-top-30">
+	<h3 class="headline">{% trans "Recent Posts" %}</h3><span class="line"></span><div class="clearfix"></div>
+	<ul class="widget-tabs">
+	{% for recent_post in recent_posts %}
+		<li>			
+	    {% spaceless %}
+	    {% if settings.BLOG_USE_FEATURED_IMAGE %}
+	    <div class="widget-thumb">
+				<a href="{{ recent_post.get_absolute_url }}">
+				{% if recent_post.featured_image %}
+					<img src="{{ MEDIA_URL }}{% thumbnail recent_post.featured_image 74 74 %}"/>
+				{% endif %}
+				</a>
+		</div>  
+		{% endif %}
+		<div class="widget-text">
+		    <h4><a href="{{ recent_post.get_absolute_url }}">{{ recent_post.title }}</a></h4>
+		    {% blocktrans with sometime=blog_post.publish_date|date %}<span>{{ sometime }} </span>{% endblocktrans %}
+	    </div>
+		<div class="clearfix"></div>
+	    {% endspaceless %}
+		</li>
+	{% endfor %}
+	</ul>
+	</div>
+	{% endif %}
+	{% endblock %}
+
+	{% block blog_keywords %}
+	{% keywords_for blog.blogpost as tags %}
+	{% if tags %}
+		<div class="widget margin-top-30">
+			<h3 class="headline">{% trans "Tags" %}</h3><span class="line"></span><div class="clearfix"></div>	
+			<nav class="tags">
+			{% for tag in tags %}
+			    <a href="{% url "blog_post_list_tag" tag.slug %}" class="tag-weight-{{ tag.weight }}">{{ tag }}</a>
+			{% endfor %}
+			</nav>
+		</div>
+	{% endif %}
+	{% endblock %}
+	
+
+	<br>
+	<br>
+
+</div>
+{% endblock %}
 
 {% block main %}
-<div id="masonry-wrapper">
+<div class="twelve columns">
+<div id="masonry-wrapper" class="margin-top-10">
 {% for blog_post in blog_posts.object_list %}
 	<div class="one-third column masonry-item">
 		<article class="from-the-blog">
@@ -46,25 +119,34 @@
 					{% endwith %}
 					{# {% endeditable %} #}
 				{% endblock %}
+				<div class="clearfix"></div>
 				{% block blog_post_list_post_content %}
-				{% if blog_post.preview_content %}
-					{# {% editable blog_post.preview_content %} #}
-					{{ blog_post.preview_content|safe  }}
-					{# {% endeditable %} #}
-				{% else %}
-					{# {% editable blog_post.content %} #}
-					{{ blog_post.description_from_content|safe }}
-					{# {% endeditable %} #}
-				{% endif %}
+					{% if blog_post.preview_content %}
+						{# {% editable blog_post.preview_content %} #}
+						{{ blog_post.preview_content|safe  }}
+						{# {% endeditable %} #}
+					{% else %}
+						{# {% editable blog_post.content %} #}
+						{{ blog_post.description_from_content|safe }}
+						{# {% endeditable %} #}
+					{% endif %}
 				{% endblock %}
-				<a href="{{ blog_post.get_absolute_url }}" class="button gray">{% trans "read more" %}</a>
+				<div class="clearfix"></div>
+				<a href="{{ blog_post.get_absolute_url }}" class="button gray margin-top-5">{% trans "read more" %}</a>
 			</section>
 		</article>
 	</div>
 {% endfor %}
 </div>
-
-{% pagination_for blog_posts %}
+</div>
 {% endblock %}
+
+{% block extra_content %}
+{% if blog_posts %}
+	{% pagination_for blog_posts %}	
+{% endif %}
+{% endblock extra_content %}
+
+
 
 
