--- a/theme/templates/email/message_send.html
+++ b/theme/templates/email/message_send.html
@@ -4,12 +4,12 @@
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
         <td style="color: #153643; font-family: Arial, sans-serif; font-size: 24px;">
-            <b>Здравствуйте, {{ shop.user }}!</b>
+            <b>Здравствуйте, {{ shop.user.first_name }}!</b>
         </td>
     </tr>
     <tr>
         <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-            Вашему магазину <a href="http://{{ request.get_host }}">handmaker.top</a> задали вопрос:</a>
+            Вашему магазину <a href="http://{{ request.get_host }}{% url 'shop_view' shop.slug %}">{{ shop.shopname }}</a> задали вопрос:</a>
         </td>
     </tr>
     {% if message %}
@@ -21,8 +21,9 @@
     {% endif %}
     <tr>
         <td style="padding: 25px 0 0 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-            Вы можете связать с ним с помощью следующих данных:
-            {{ request.user }}
+            Контактные данные пользователя:
+            {{ request.user.fisrt_name }} <br>
+            {{ request.user.email }}
         </td>
     </tr>
 </table>
