--- a/theme/templates/generic/includes/comments.html
+++ b/theme/templates/generic/includes/comments.html
@@ -1,18 +1,9 @@
 {% load i18n mezzanine_tags comment_tags %}
 <div>
-<h3>{% trans "Comments" %}</h3>
-{% if settings.COMMENTS_DISQUS_SHORTNAME %}
+{% if not settings.COMMENTS_DISQUS_SHORTNAME %}
 {% include "generic/includes/disqus_comments.html" %}
 {% else %}
-<!-- <script>
-$(function() {
-    $('.reply').click(function() {
-        $('.comment-reply-form').hide();
-        $(this).siblings('.comment-reply-form').toggle();
-    });
-});
-</script>
-<style>.input_id_honeypot {display:none !important;}</style> -->
+<style>.input_id_honeypot {display:none !important;}</style>
 
 
 {% comment_thread object_for_comments %}
