--- a/theme/templates/generic/includes/disqus_comments.html
+++ b/theme/templates/generic/includes/disqus_comments.html
@@ -1,5 +1,5 @@
 {% load disqus_tags %}
-<div id="hypercomments_widget"></div>
+<!--<div id="hypercomments_widget"></div>
 <script type="text/javascript">
 _hcwp = window._hcwp || [];
 _hcwp.push({widget:"Stream", widget_id: 86038});
@@ -13,4 +13,4 @@ var s = document.getElementsByTagName("script")[0];
 s.parentNode.insertBefore(hcc, s.nextSibling);
 })();
 </script>
-<a href="http://hypercomments.com" class="hc-link" title="comments widget">comments powered by HyperComments</a>
+<a href="http://hypercomments.com" class="hc-link" title="comments widget">comments powered by HyperComments</a>-->
