--- a/theme/templates/shop/product.html
+++ b/theme/templates/shop/product.html
@@ -21,8 +21,8 @@
 
 {% block extra_js %}
 {{ block.super }}
-<script>var variations = {{ variations_json|safe }};</script>
-<script src="{% static "cartridge/js/product_variations.js" %}"></script>
+<!--<script>var variations = {{ variations_json|safe }};</script>
+<script src="{% static "cartridge/js/product_variations.js" %}"></script>-->
 {% endblock %}
 
 {% block breadcrumbs_title %}
@@ -34,7 +34,7 @@
 	<li>{{ product.title }}</li>
 {% endblock %}
 
-{% block sidebar %}
+{% block leftsidebar %}
 {% if images %}
 	<div class="seven columns">
 		<div class="slider-padding">
@@ -68,89 +68,70 @@
 				{% endif %}
 			{% endif %}
 		</section>
-
-			<!-- Text Parapgraph -->
-		<section style="padding-bottom: 55px">
+		<section>
 			<p class="margin-reset">
-			{% if product.content %}
-				{{ product.content|richtext_filters|safe }}
-			{% else %}
-				Описание товара отсутствует
-			{% endif %}
+				{% if product.content %}
+					{{ product.content|richtext_filters|safe }}
+				{% else %}
+					Описание товара отсутствует
+				{% endif %}
 			</p>
 
-				<!-- Share Buttons -->
-			<!--<a href="{% url "true_index" %}" class="button">Купить</a>-->
-			
-{% if has_available_variations %}
-{% errors_for add_product_form %}
-<section class="linking">
-<form method="post" id="add-cart" class="shop-form">
-    {# {% fields_for add_product_form %} #}
-    <div class="form-actions">
-        <!--<input type="submit" class="button dark adc" name="add_cart" value="{% trans "Buy" %}">-->
-        {% if settings.SHOP_USE_WISHLIST %}
-        <!--<input type="submit" class="btn btn-default btn-lg pull-left" name="add_wishlist" value="{% trans "Save for later" %}">-->
-        {% endif %}
-    </div>
-</form>
-<a href="#" class="button dark adc">{% trans "Buy" %}</a>
-<div class="clearfix"></div>
-</section>
-{% else %}
-<p class="error-msg">{% trans "This product is currently unavailable." %}</p>
-{% endif %}
-			<!--<div class="share-buttons">
-				<ul>
-					<li><a href="#">Поделиться</a></li>
-					<li class="share-facebook"><a href="#">Facebook</a></li>
-					<li class="share-twitter"><a href="#">Twitter</a></li>
-					<li class="share-gplus"><a href="#">Google Plus</a></li>
-					<li class="share-pinit"><a href="#">Pin It</a></li>
-				</ul>
-			</div>-->
-			<div class="clearfix"></div>
-			{% if product.keywords.all %}
-				<div class="widget margin-top-10">
-					<h3 class="headline">{% trans "Tags" %}</h3><span class="line"></span><div class="clearfix"></div>	
-					<nav class="tags">
+			{% if has_available_variations %}
+				{% errors_for add_product_form %}
+				<section>
+				<form method="post" id="add-cart" class="shop-form">
+				    {# {% fields_for add_product_form %} #}
+				    <div class="form-actions">
+				        <!--<input type="submit" class="button dark adc" name="add_cart" value="{% trans "Buy" %}">-->
+				        {% if settings.SHOP_USE_WISHLIST %}
+				        <!--<input type="submit" class="btn btn-default btn-lg pull-left" name="add_wishlist" value="{% trans "Save for later" %}">-->
+				        {% endif %}
+				    </div>
+				</form>
+				<a href="#" class="button dark adc">{% trans "Buy" %}</a>
+				<div class="clearfix"></div>
+				</section>
+			{% else %}
+				<p class="error-msg">{% trans "This product is currently unavailable." %}</p>
+			{% endif %}
+		<div class="clearfix"></div>
+
+		{% if product.keywords.all %}
+			<div class="widget margin-top-0">
+				<h3 class="headline">{% trans "Tags" %}</h3><span class="line"></span><div class="clearfix"></div>	
+				<nav class="tags">
 					{% for tag in product.keywords.all %}
 					    <a href="/search/?q={{tag}}" class="tag-weight-{{ tag.weight }}">{{ tag }}</a>
 					{% endfor %}
-					</nav>
-				</div>
-			{% endif %}
-			<div class="widget margin-top-10">
-			{% get_shop product.user as shop %}
-			    <h3 class="headline">Информация о магазине</h3><span class="line"></span><div class="clearfix"></div>
-				<a href="{% url 'shop_view' shop.slug %}">
-				<img src="
-				{% if shop.image %}
-					{{ MEDIA_URL }}{% thumbnail shop.image 80 80 %}
-				{% else %}
-					{% gravatar_url profile_user.email 100 %}
-				{% endif %}
-				" style="border: 0; float: left; margin-right: 15px">
-				<h2>
-					{{ shop.shopname }}
-				</h2>
-				</a>
-				<p><i class="fa fa-map-marker"></i> <strong>{{shop.country}}, {{ shop.city }}</strong><p>
-				<!--<a class="button color" href="#"> Задать вопрос </a>-->
-			</div>	
-		</section>
-
+				</nav>
+			</div>
+		{% endif %}
+		<div class="widget margin-top-10">
+			<h3 class="headline">Информация о магазине</h3><span class="line"></span><div class="clearfix"></div>
+			<a href="{% url 'shop_view' product.user.shop.slug %}">
+				<img src="{{ MEDIA_URL }}{% thumbnail product.user.shop.image 80 80 %}" class="pull-left margin-right-5">
+				<h2>{{ product.user.shop.shopname }}</h2>
+			</a>
+			<p><i class="fa fa-map-marker"></i> <strong>{{ product.user.shop.country }}, {{ product.user.shop.city }}</strong><p>
+		</div>	
+	</section>
 	</div>
 </div>
 {% endblock %}
-{% block product_info %}
-	<div class="sixteen columns margin-top-25">
+
+{% block extra_content %}
+<div class="container">
+	<div class="sixteen columns margin-top-5">
 			<!-- Tabs Navigation -->
 			<ul class="tabs-nav">
 				<li class="active"><a href="#tab2">Характеристики</a></li>
-				<li><a href="#tab4">Доставка</a></li>
+				{% get_fields product.user.shop starts_with="express" as express_fields %}
+    			{% if express_fields %}
+					<li><a href="#tab4">Доставка</a></li>
+				{% endif %}
 				<li><a href="#tab5">Правила магазина</a></li>
-				<li><a href="#tab3">Комментарии <span class="tab-reviews"></span></a></li>
+				<!--<li><a href="#tab3">Комментарии <span class="tab-reviews"></span></a></li>-->
 			</ul>
 
 			<!-- Tabs Content -->
@@ -175,82 +156,85 @@
 				</div>
 				<div class="tab-content" id="tab3">
 					{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-						{% include "generic/includes/disqus_comments.html" %}
+						{# {% include "generic/includes/disqus_comments.html" %} #}
 					{% endif %}
 				</div>
+				{% if express_fields %}
 				<div class="tab-content list-1" id="tab4">
-					{% get_shop product.user as shop %}
 					<ul>
-			            {% for fields in shop.get_express_fields|grouped %}
-				            <li>
-				                {% for field in fields %} {% if field.value == True %}
-				                <span> {{ field.label }}: </span> {% else %}
-				                <span style="white-space: nowrap">{{ field.value|rub_currency }} </span> {% endif %} 
-				            {% endfor %}
-				            </li>
-				        {% endfor %}
+			            {% for fields in express_fields|grouped %}
+			            <li>
+			                {% for field in fields %} 
+			                    {% if field.value == True %}
+			                        <span> {{ field.label }}</span> 
+			                    {% else %}
+			                        <span style="white-space: nowrap">{{ field.value|rub_currency }} </span> 
+			                    {% endif %} 
+			                {% endfor %}
+			            </li>
+			            {% endfor %}
 			        </ul>
 				</div>
+				{% endif %}
 				<div class="tab-content" id="tab5">
-				<p>{{ shop.rules|safe }}</p>
+				<p>{{ product.user.shop.rules|safe }}</p>
 				</div>
 
 			</div>
 	</div>
-{% endblock %}
-
-{% block related_products %}
-{% if settings.SHOP_USE_RELATED_PRODUCTS and related_products %}
+</div>
 <!-- Related Products -->
 <div class="container margin-top-5">
 
-	<!-- Headline -->
-	<div class="sixteen columns">
-		<h3 class="headline">Похожие товары</h3>
-		<span class="line margin-bottom-0"></span>
-	</div>
-
 	<!-- Products -->
-	<div class="products">
-	{% for product in related_products %}
-
-		<div class="four columns">
-			<figure class="product">
-				{% if product.on_custom_sale %}
-					<div class="product-discount">СКИДКА</div>
-				{% endif %}
-				<div class="mediaholder">
-				<a href="{{ product.get_absolute_url }}">
-					{% if product.image %}
-					<img alt="" src="{{ MEDIA_URL }}{% thumbnail product.image 250 330 %}">
-					<div class="cover">
-						<img alt="" src="{{ MEDIA_URL }}{% thumbnail product.image 300 380 %}">
-					</div>
-					{% else %}
-					<img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 250 330 %}">
-					<div class="cover">
-						<img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 300 380 %}">
-					</div>
+	<span class="line margin-bottom-0"></span>
+	<div class="sixteen columns products">
+            {% for product in product.user.product_set.all|slice:"5" %}
+			<div class="three shop columns custom_column">
+				<figure class="product">
+					<div class="badges">
+					{% if product.pre_order %}
+						<div class="product-example">Для примера</div>
+					{# {% else %} #}
+						<!--<div class="product-ready">Готовый вариант</div>-->
 					{% endif %}
-				</a>
-				<a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
-				</div>
-				<a href="{{ product.get_absolute_url }}">
-					<section>
-						<span class="product-category">Готовый или под заказ <!-- {{product|get_product_category}} --></span>
-						<h5>{{ product.title }}</h5>
-						{% if product.on_custom_sale %}
-							<span class="product-price-discount">{{ product.unit_price|rub_currency }}<i>{{ product.price|rub_currency }}</i></span>
+					{% if product.on_custom_sale %}
+						<div class="product-discnt">СКИДКА</div>
+					{% endif %}
+					</div>
+					{% get_product_images product as images %}
+					<div class="mediaholder {% if not images or images.count == 1 %}no-anim{%endif%}">
+					<a href="{{ product.get_absolute_url }}">
+						{% if images %}
+						<img alt="" src="{{ MEDIA_URL }}{% thumbnail images.0 250 330 %}">
+							{% if images.count != 1 %}
+							<div class="cover">
+									<img alt="" src="{{ MEDIA_URL }}{% thumbnail images.1 300 380 %}">
+							</div>
+							{% endif %}
 						{% else %}
-						<span class="product-price">{{ product.price|rub_currency }}</span>
+						<img alt="" src="{{ STATIC_URL }}{% thumbnail 'images/no-image.jpg' 250 330 %}">
 						{% endif %}
-					</section>
-				</a>
-			</figure>
-		</div>
-	{% endfor %}
+					</a>
+					<a href="{{ product.get_absolute_url }}" class="product-button"><i class="fa fa-share"></i>Подробнее</a>
+					</div>
+					<a href="{{ product.get_absolute_url }}">
+						<section>
+							<h5>{{ product.title|title|truncatechars:34 }}</h5>
+							<a href="{% url 'shop_view' product.user.shop.slug %}" class="shopname">{{ product.user.shop.shopname }}</a>
+							<!--<span class="product-category">
+							</span>-->
+							{% if product.on_custom_sale %}
+								<span class="product-price-discount">{{ product.unit_price|rub_currency }}<i>{{ product.price|rub_currency }}</i></span>
+							{% else %}
+							<span class="product-price">{{ product.price|rub_currency }}</span>
+							{% endif %}
+						</section>
+					</a>
+				</figure>
+			</div>
+			{% endfor %}
+		
 	</div>
 </div>
-{% endif %}
-<div class="margin-top-50"></div>
 {% endblock %}
