--- a/theme/templates/email/message_send.html
+++ b/theme/templates/email/message_send.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
         <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
-            Вашему магазину <a href="http://{{ request.get_host }}{% url 'shop_view' shop.slug %}">{{ shop.shopname }}</a> задали вопрос:</a>
+            Вашему магазину <a href="http://{{ request.get_host }}{{ shop.get_absolute_url }}">{{ shop.shopname }}</a> задали вопрос:</a>
         </td>
     </tr>
     {% if message %}
