--- a/theme/templates/admin/change_list.html
+++ b/theme/templates/admin/change_list.html
@@ -110,7 +110,7 @@
 							<div class="DTTT btn-group pull-left mt-sm">
 							<a href="add/{% if is_popup %}?_popup=1{% endif %}" class="btn btn-default DTTT_button_text" id="ToolTables_crudtable_0">
 								<i class="fa fa-plus"></i> 
-								<span>Добавить элемент</span>
+								<span>Добавить</span>
 							</a>
 							</div>
 						</div>
@@ -146,7 +146,7 @@
 <!-- 								      <span class="input-group-btn"> -->
 								  
 								    <button type="submit" class="btn" title="Выполнить выбранное действие" name="index" value="1" style="color: rgb(97, 97, 97)!important; margin: 0!important; font-size: inherit;">
-								    <i class="fa fa-minus"></i> <span>Удалить элементы</span>
+								    <i class="fa fa-minus"></i> <span>Удалить</span>
 								    <div class="ripple-container"></div></button>
 								      <!-- </span> -->
 								    </div>  
