order_list url fix

--- a/theme/templates/order/order_list.html
+++ b/theme/templates/order/order_list.html
@@ -11,9 +11,12 @@
 {% endfor %}
 {% endmetablock %}{% endblock %}
 
-{% block meta_description %}{% metablock %}
+{% block meta_description %}
+{% metablock %}
 {{ page.description }}
-{% endmetablock %}{% endblock %}
+{% endmetablock %}
+{% endblock %}
+
 {% block breadcrumbs_title %}
 	<h2>Стол заказов</h2>
 {% endblock breadcrumbs_title %}
@@ -22,12 +25,13 @@
 {% if category %}
 	<li><a href="{% url 'order_list' %}">Стол заказов</a></li>
 {% endif %}
-{% for category in order_categories %}
-	{% url 'order_list_category' category.slug as category_url %}
-	{% if category_url in request.get_full_path %}
-		<li> {{ category }} </li>
-	{% endif %} 
-{% endfor %}
+
+{# {% for category in order_categories %} #}
+	{# {% url 'order_list_category' category.slug as category_url %} #}
+	{# {% if category_url in request.get_full_path %} #}
+		<!--<li> {{ category }} </li>-->
+	{# {% endif %}  #}
+{# {% endfor %} #}
 {% endblock %}
 
 {% block main %}
@@ -38,7 +42,9 @@
 			<h3 class="headline">Виды работ </h3><span class="line"></span><div class="clearfix"></div>
 			<nav class="categories">
 				<ul>
-				<li><a href="{% url 'order_list' %}" {% url 'order_list' as the_url %}{% if the_url == request.get_full_path %}class="active"{% endif %}>Любой</a></li>
+				<li>
+					<a href="{% url 'order_list' %}" {% url 'order_list' as the_url %}{% if the_url == request.get_full_path %}class="active"{% endif %}>Любой</a>
+				</li>
 				{% for category in order_categories %}
 					{% url 'order_list_category' category.slug as the_url %}
 					<li><a href="{{ the_url }}"{% if the_url in request.get_full_path %}class="active"{% endif %}>{{ category }}</a></li>
