--- a/theme/templates/order/order_list.html
+++ b/theme/templates/order/order_list.html
@@ -24,14 +24,8 @@
 {% block breadcrumb_element %}
 {% if category %}
 	<li><a href="{% url 'order_list' %}">Стол заказов</a></li>
+	<li><a href="{% url 'order_list_category' category.slug %}">{{ category }}</a></li>
 {% endif %}
-
-{# {% for category in order_categories %} #}
-	{# {% url 'order_list_category' category.slug as category_url %} #}
-	{# {% if category_url in request.get_full_path %} #}
-		<!--<li> {{ category }} </li>-->
-	{# {% endif %}  #}
-{# {% endfor %} #}
 {% endblock %}
 
 {% block main %}
@@ -43,11 +37,12 @@
 			<nav class="categories">
 				<ul>
 				<li>
-					<a href="{% url 'order_list' %}" {% url 'order_list' as the_url %}{% if the_url == request.get_full_path %}class="active"{% endif %}>Любой</a>
+					{% url 'order_list' as main_url %}
+					<a href="{{ main_url }}" {% if main_url == request.get_full_path %}class="active"{% endif %}>Любой</a>
 				</li>
 				{% for category in order_categories %}
-					{% url 'order_list_category' category.slug as the_url %}
-					<li><a href="{{ the_url }}"{% if the_url in request.get_full_path %}class="active"{% endif %}>{{ category }}</a></li>
+					{% url 'order_list_category' category.slug as category_url %}
+					<li><a href="{{ category_url }}"{% if category_url in request.get_full_path %}class="active"{% endif %}>{{ category }}</a></li>
 				{% endfor %}
 				</ul>
 			</nav>
